--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -45,10 +45,15 @@ h3 {
 p {
   line-height: 1.7;
   margin-bottom: 10px;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 p:last-child {
   margin-bottom: 0;
+  text-align: justify;
+  text-justify: inter-word;
+  word-spacing:-2px;
 }
 
 .tm-page-header {
@@ -62,7 +67,7 @@ p:last-child {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  padding: 35px;
+  padding: 45px;
 }
 
 .tm-nav-section {
@@ -188,8 +193,8 @@ p:last-child {
 
 .tm-feature-h {
   font-size: 1.8rem;
-  text-align: justify;
-  text-justify: inter-word;
+  /* text-align: justify;
+  text-justify: inter-word; */
 }
 
 .tm-feature-icon {
@@ -240,25 +245,39 @@ p:last-child {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  /* border: 1px solid #c7c7c7; */
+  border: 3px solid rgb(5, 110, 214);
   padding: 10px 10px;
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
-.tm-activity-block-text {
+.tm-activity-block-text-header {
   padding-left: 24px;
   padding-right: 24px;
   margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 20px;
+  padding-top: 20px;
+  /* text-align: justify;
+  text-justify: inter-word; */
+}
+
+.tm-activity-block-text-p {
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-bottom: 10px;
+  margin-top: 20px;
   text-align: justify;
   text-justify: inter-word;
+  word-spacing:-2px;
 }
 
 .tm-activity-block-text h3 {
   margin-bottom: 10px;
-  text-align: justify;
-  text-justify: inter-word;
+  /* text-align: justify; */
+  /* text-justify: inter-word;
+  word-spacing:-2px; */
+  margin-top: 20px;
+  padding-top: 20px;
 }
 
 .tm-activity-img-container {
