--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -245,9 +245,10 @@ p:last-child {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  border: 3px solid rgb(5, 110, 214);
+  border: 1px solid rgb(5, 110, 214);
+  border-radius: 15px;
   padding: 10px 10px;
-  margin-top: 0px;
+  margin-top: 5px;
   margin-bottom: 0px;
 }
 
